# StackOverflowApiClone

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.sqlx/: query-e0ba5c20f3b61688d83d94af0d1c9fba0483b97eb5d2d9566ab78eb2887329bb.json
migrations/: 20240109155133_setup_up.sql  20240109155156_setup_down.sql
scripts/: init_postgresdb.sh  start_postgres_container.sh  start_postgresdb.sh
src/: cors.rs  db.rs  main.rs  models.rs
src/handlers/: handlers_inner.rs  mod.rs
src/persistance/: answers_dao.rs  mod.rs  questions_dao.rs  tests.rs
src/utils/: mod.rs
