[package]
name = "stackoverflowapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
rocket = {version="0.5.0", features = ["json"]}
serde = {version = "1.0.194", features = ["derive"]}
tokio = {version = "1.35.1", features = ["full"]}
uuid = {version = "1.6.1", features = ["fast-rng", "v4"]}
